# dds2png

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  changelog.md  readme.md
.github/workflows/: build-clang.yml  build-gcc.yml  clang.yml  debian.yml  gcc.yml  msys2.yml
ci/: gitlab-01-install-dependencies.sh  gitlab-02-create-package.sh
debian/: changelog  control  copyright  dds2png.install  watch
documentation/: msys2-build.md  third-party.md
src/: CMakeLists.txt  ReturnCodes.hpp  Version.cpp  Version.hpp  dds2png.cbp  main.cpp
src/util/: GitInfos.hpp  GitInfos.template.cpp
tests/: CMakeLists.txt
